--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,14 +47,14 @@ android {
 dependencies {
     def paging_version = "2.1.0"
     def room_version = "2.1.0-alpha04"
-    def work_version = "1.0.0-beta05"
+    def work_version = "1.0.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
-    implementation 'androidx.annotation:annotation:1.0.1'
+    implementation 'androidx.annotation:annotation:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'androidx.lifecycle:lifecycle-common:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
@@ -62,9 +62,9 @@ dependencies {
     implementation "androidx.paging:paging-common-ktx:$paging_version"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation 'com.google.android.material:material:1.1.0-alpha03'
-    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-beta02"
-    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-beta02"
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-rc02"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-rc02"
     implementation "android.arch.work:work-runtime:$work_version"
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
