--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,43 +45,49 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.0.0"
+    def navigation_version = "2.0.0"
     def paging_version = "2.1.0"
-    def room_version = "2.1.0-alpha04"
-    def work_version = "1.0.0"
+    def room_version = "2.0.0"
+    def work_version = "2.0.0-rc01"
+    def glide_version = "4.8.0"
+    def retrofit_version = "2.5.0"
+    def ok_http_version = "3.14.0"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
     implementation 'androidx.annotation:annotation:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
-    implementation 'androidx.lifecycle:lifecycle-common:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
     implementation "androidx.paging:paging-common-ktx:$paging_version"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation 'com.google.android.material:material:1.1.0-alpha04'
-    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-rc02"
-    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-rc02"
-    implementation "android.arch.work:work-runtime:$work_version"
-    implementation "android.arch.work:work-runtime-ktx:$work_version"
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.13.1'
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
-    implementation 'org.jetbrains.anko:anko:0.10.8'
-    implementation 'com.vk:androidsdk:1.6.7'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation ('com.github.bumptech.glide:okhttp3-integration:4.8.0'){
+    implementation "androidx.navigation:navigation-runtime-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$navigation_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigation_version"
+    implementation "androidx.work:work-runtime:$work_version"
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:$ok_http_version"
+    implementation "com.squareup.okhttp3:okhttp:$ok_http_version"
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation ("com.github.bumptech.glide:okhttp3-integration:$glide_version"){
         exclude group: 'glide-parent'
     }
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
-    kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'com.vk:androidsdk:1.6.7'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'org.jetbrains.anko:anko:0.10.8'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
