--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
+*.apk
 *.iml
 .gradle
 /local.properties
-/.idea/caches/build_file_checksums.ser
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/vcs.xml
-/.idea/misc.xml
+.idea
 .DS_Store
 /build
 /captures
+release/
+obj/
+libs/
 .externalNativeBuild
